# control-calidad

./: .gitignore  Control_Calidad.md  convert_html_to_pdf.ps1  convert_to_pdf.py
Estación7/Control-Calidad/: prd_Calidad.md  pyproject.toml  sync-to-linear.py  update-linear-tasks.py
Estación7/Control-Calidad/aidlc-docs/construction/backend-api-unidad 1/: nfr-design.md  (+4 more)
Estación7/Control-Calidad/aidlc-docs/inception/: c4-architecture.md  units-ddd-mapping.md  user-stories-detailed.md
Estación7/Control-Calidad/app/: lifespan.py  main.py  settings.py
Estación7/Control-Calidad/app/auth/: dependencies.py  security.py
Estación7/Control-Calidad/app/domain/: value_objects.py
Estación7/Control-Calidad/app/middleware/: auth_middleware.py
Estación7/Control-Calidad/app/models/: base.py  orm.py
Estación7/Control-Calidad/app/monitoring/: audit_logger.py
Estación7/Control-Calidad/app/repositories/: approval_repository.py  audit_repository.py  inspection_repository.py
Estación7/Control-Calidad/app/routes/: approvals.py  auth.py  inspections.py  masters.py
Estación7/Control-Calidad/app/schemas/: approval_schemas.py  common.py  inspection_schemas.py  masters_schemas.py
Estación7/Control-Calidad/docs/tasks/: 003-frontend-wave1.md  004-frontend-wave2.md  005-offline-sync-wave2.md  006-offline-sync-wave3.md  README.md  task-package.yaml
Estación7/Control-Calidad/migrations/: env.py
Estación7/Control-Calidad/migrations/versions/: 0001_initial_schema.py
Estación7/Control-Calidad/tests/integration/: test_auth_routes.py  test_inspection_routes.py  test_offline_sync.py
(+267 files in other folders)
